--- a/wiki/ThreatIntelligenceTools.wiki
+++ b/wiki/ThreatIntelligenceTools.wiki
@@ -7,6 +7,7 @@ A page to highlight and record tools in the threat intelligence space
  * [http://abusehelper.be AbuseHelper] - automatically process your incident notifications
  * [http://collectiveintel.org Collective Intelligence Framework (CIF)] - cyber threat intelligence management system
  * [http://tools.netsa.cert.org/script-cif2stix/index.html Cif2Stix] - Build STIX document from CIF output
+ * [https://github.com/crits CRITs] - Collaborative Research Into Threats
  * [http://django-mantis.readthedocs.org/en/latest/index.html Mantis] - The MANTIS (Model-based Analysis of Threat Intelligence Sources) Framework consists of several Django Apps that, in combination, support the management of cyber threat intelligence expressed in standards such as STIX, CybOX, OpenIOC, IODEF (RFC 5070), etc.
  * [https://github.com/MISP/MISP MISP] - Malware Information Sharing Platform
  * [http://n6.cert.pl/ n6] - a platform for collection, processing and transmission of information on security incidents on the network
