--- a/wiki/Upgrade_v1.wiki
+++ b/wiki/Upgrade_v1.wiki
@@ -268,7 +268,7 @@ $ sudo PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Net::DNS Net::Abuse::Utils 
 }}}
  # update Net::DNS (fixes some recent bugs)
 {{{
-$ sudo cpanm http://search.cpan.org/CPAN/authors/id/N/NL/NLNETLABS/Net-DNS-0.76_2.tar.gz
+$ sudo cpanm http://search.cpan.org/CPAN/authors/id/N/NL/NLNETLABS/Net-DNS-0.77.tar.gz
 }}}
  # finish with the install
  # be sure to copy any custom .cfg's from /opt/cif-v1.0.2/etc to your new /opt/cif/etc directory
